--- a/transaction/build.gradle
+++ b/transaction/build.gradle
@@ -43,6 +43,8 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	compile('org.springframework.boot:spring-boot-starter-aop')
+  	compile group: 'com.google.guava', name: 'guava', version: '21.0'
 }
 
 tasks.named('test') {
