--- a/transaction/build.gradle
+++ b/transaction/build.gradle
@@ -43,7 +43,10 @@ dependencies {
     
     // https://mvnrepository.com/artifact/org.json/json
     implementation 'org.json:json:20230227'
-
+    
+    // 엑셀 다운로드
+    implementation 'org.apache.poi:poi-ooxml:5.2.5'
+    implementation 'com.opencsv:opencsv:5.9'
     
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
